Theme 'Light alt. blue' update 1.39. Fixed list of languages in the metadata section not showing up. The 'delete image' button (profile section) doesn't have autofocus anymore.

--- a/src/themes/light-alt-blue/theme.css
+++ b/src/themes/light-alt-blue/theme.css
@@ -6,7 +6,7 @@
 
 .skinHeader,
 html {
-    color: #427386;
+    color: #01394e;
 }
 
 .headerLeft, .headerRight {
@@ -73,19 +73,15 @@ html {
 }
 
 .backgroundContainer {
-    /*background: url(bg.jpg) center top no-repeat #033361;*/
 	background: linear-gradient(105deg, rgba(229, 242, 235, 0.4) 0%, rgba(60, 152, 126, 0.4) 40%, rgba(38, 112, 148, 0.4) 70%, rgba(185, 217, 219, 0.4) 100%);
 	background-color: rgb(220, 242, 248);
     -webkit-background-size: cover;
     background-size: cover;
 }
 
-.backgroundContainer.withBackdrop {
-    background-color: rgba(220, 242, 248, 0.9);
-}
-
+.backgroundContainer.withBackdrop,
 .backgroundContainer.withThemeBackdrop {
-    background-color: rgba(220, 242, 248, 0.8);
+    background-color: transparent;
 }
 
 .dialog,
@@ -106,15 +102,8 @@ html {
 
 .fab:focus,
 .raised:focus {
-    background-color: rgba(230, 219, 76, 0.4);
+    background-color: rgba(66, 126, 139, 0.4);
 	color: rgba(255, 232, 232, 0.8);
-}
-
-.inputLabel,
-.inputLabelUnfocused,
-.paperListLabel,
-.textareaLabelUnfocused {
-    color: #555;
 }
 
 .button-link,
@@ -126,7 +115,7 @@ html {
 
 .paperList,
 .visualCardBox {
-    background-color: #fff;
+    background: rgba(103, 164, 161,.3);
 }
 
 .defaultCardBackground1 {
@@ -397,7 +386,7 @@ html {
 .homeLibraryButton {
 	color: rgba(8, 26, 60, 0.8) !important;
 	background-color: rgba(36, 136, 153, 0.4);
-	box-shadow: 1px 1px 8px #a6a6a0;
+	box-shadow: 0px 0px 8px #a8e6d2;
 	font-weight: 500;
 }
 
@@ -501,7 +490,7 @@ html {
 	margin: 0 auto !important;
 	color: rgba(8, 26, 60, 0.8) !important;
 	background-color: rgba(36, 136, 153, 0.4);
-	box-shadow: 1px 1px 8px #a6a6a0;
+	box-shadow: 0px 0px 8px #609295;
 	font-weight: 500;
 }
 
@@ -952,4 +941,30 @@ fieldset {
 .mdl-spinner__layer-3,
 .mdl-spinner__layer-4 {
     border-color: #527898 !important;
+}
+
+div[data-role="controlgroup"] a[data-role="button"] {
+	background: #cce3e6 !important;
+	color: #fff !important;
+	font-weight: 600 !important;
+}
+
+div[data-role="controlgroup"] a.ui-btn-active {
+	background: #377f8f !important;
+	color: #fff !important;
+	font-weight: 600 !important;
+}
+
+.headerUserButtonRound {
+	border: 1px solid rgb(81, 107, 116);
+}
+
+.userProfileImage {
+	border: 6px ridge rgb(81, 107, 116);
+}
+
+.sectionTitle {
+	color: #efefef;
+	text-shadow: 1px 1px 3px #1a8489;
+	font-weight: 600;
 }
